- Added the script for Commander Dawnforge to make the quest Information Gathering trigger for all members of a group.
- Updated the respawn time of Mana Bomb Fragment.
- Updated the restock time of Suspicious Outhouse.
- Added Energy Isolation Cube to the loot table of Sunfury Arcanist for the quest Potential Energy Source.
- Updated the flags of Energy Isolation Cube to allow all members of a group to loot it.

[2024-04-19]
- Updated the smart script for Longrunner Proudhoof to give all members of a group credit for the quest We Strike!
- Updated the restock time of Eagle Figurine.
- Updated the restock time of Amani Vase.
- Updated the smart script for "Silvermoon" Harry to give all members of a group the quest item.
- Added the script for Attracted Reef Bull to make the quest The Way to His Heart... trigger for all members of a group.
- Added Steel Gate Artifact to the loot table of Steel Gate Excavator for the quest The Artifacts of Steel Gate.
- Updated the flags of Steel Gate Artifact to allow all members of a group to loot it.

[2024-04-20]
- Added Dwarven Keg to the loot table of Deranged Explorer for the quest What's in That Brew?.
- Updated the flags of Dwarven Keg to allow all members of a group to loot it.
- Added Horde Armaments to the loot table of Anub'ar Ambusher for the quest Into the Fold.
- Updated the flags of Horde Armaments to allow all members of a group to loot it.

[2024-04-21]
- Added Composite Ore to the loot table of Wastes Digger for the quest Stocking Up.
- Updated the flags of Composite Ore to allow all members of a group to loot it.

[2024-04-22]
- Added Everfrost Shard to the loot table of Ravenous Jormungar for the quest Raising Hodir's Spear.
- Added Everfrost Shard to the loot table of Viscous Oil for the quest Raising Hodir's Spear.
- Updated the flags of Everfrost Shard to allow all members of a group to loot it.