@@ -752,6 +752,11 @@ INSERT INTO `creature_loot_template` (`Entry`, `Item`, `Chance`, `QuestRequired`
 DELETE FROM `creature_loot_template` WHERE `Entry`=29402 AND `Item`=40728;
 INSERT INTO `creature_loot_template` (`Entry`, `Item`, `Chance`, `QuestRequired`, `MinCount`, `MaxCount`, `Comment`) VALUES (29402, 40728, 48, 1, 1, 3, 'Ironwool Mammoth - Hearty Mammoth Meat');
 
+-- Small Proto-Drake Egg (Quest: Veranus (Id: 13050))
+-- Stormpeak Hatchling
+DELETE FROM `creature_loot_template` WHERE `Entry`=29755 AND `Item`=42784;
+INSERT INTO `creature_loot_template` (`Entry`, `Item`, `Chance`, `QuestRequired`, `Comment`) VALUES (29755, 42784, 100, 1, 'Stormpeak Hatchling - Hearty Mammoth Meat');
+
 -- Scourge Scrap Metal (Quest: Making Something Out Of Nothing (Id: 12901))
 -- Vargul Deathwaker
 DELETE FROM `creature_loot_template` WHERE `Entry`=29449 AND `Item`=41399;
